List of restaurants is displayed to the user, (menu, restaurant, order, order items) tables are created and respective entitiy classes, repository classes are defined.

--- a/src/main/resources/templates/restaurants_list.html
+++ b/src/main/resources/templates/restaurants_list.html
@@ -34,7 +34,7 @@
                 <td th:text="${restaurant.name}">Restaurant Name</td>
 <!--                <td th:text="${restaurant.menu}">Restaurant Menu</td>-->
                 <td>
-                    <a th:href="@{'/menu/' + ${restaurant.id}}">Menu</a>
+                    <a th:href="@{'/list_menu/' + ${restaurant.id}}">Menu</a>
                 </td>
             </tr>
             </tbody>
